mychart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: service1
  name: service1
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: service1
  type: ClusterIP
