mychart/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: socar-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
    - "service1.taskoo.net"
  gateways:
    - socar-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: service1
            port:
              number: 5000
